subdir('dc')
subdir('hybrid')
subdir('simplex')
subdir('vol')

libfive_render_brep = [
	libfive_render_brep_dc,
	libfive_render_brep_hybrid,
	libfive_render_brep_simplex,
	libfive_render_brep_vol,
	files(
		'contours.cpp',
		'edge_tables.cpp',
		'manifold_tables.cpp',
		'mesh.cpp',
		'neighbor_tables.cpp',
		'progress.cpp',
	)
]
