libfive_render_brep_hybrid = files(
	'hybrid_debug.cpp',
	'hybrid_mesher.cpp',
	'hybrid_neighbors2.cpp',
	'hybrid_neighbors3.cpp',
	'hybrid_object_pool2.cpp',
	'hybrid_object_pool3.cpp',
	'hybrid_tree2.cpp',
	'hybrid_tree3.cpp',
	'hybrid_worker_pool2.cpp',
	'hybrid_worker_pool3.cpp',
	'hybrid_xtree2.cpp',
	'hybrid_xtree3.cpp',
)
